--- a/css/stayle.css
+++ b/css/stayle.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #E9EDF4;
+    background-color: white;
     font-family: 'Jost', sans-serif;
     
 }
@@ -11,6 +11,13 @@ body{
 
 .nav-item:hover .nav-link{
     color: #960909;
+}
+
+.ss{
+    background-color: #E9EDF4;
+    padding-left: 200px;
+    padding-top: 100px;
+    padding-bottom: 50px;
 }
 
 .main-subtitle{
@@ -68,3 +75,15 @@ body{
     background: white !important;
 }
 
+
+    
+
+.img{
+    padding-top: 20px;
+    background-color: #f2f5fb;
+    border-radius: 100px;
+    width: 80px;
+    height: 80px;
+    text-align: center;
+    margin: 15px;
+}
